Bug 403776 - Powerdevil suddenly crashes during normal operation
Summary: Powerdevil suddenly crashes during normal operation
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.15.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 404998 406320 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-30 19:49 UTC by Lucia Mrenica
Modified: 2019-04-08 04:16 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.3
Sentry Crash Report:


Attachments
Log (5.39 KB, text/plain)
2019-01-30 19:49 UTC, Lucia Mrenica
Details
powerdevil_crash_report (7.07 KB, text/plain)
2019-02-24 13:05 UTC, Stefan Zurucker
Details
qBittorrent is erroneously suppressing power mgmt, why? (17.78 KB, image/png)
2019-03-06 14:34 UTC, hugh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lucia Mrenica 2019-01-30 19:49:44 UTC
Created attachment 117743 [details]
Log

See 'Log'

SOFTWARE/OS VERSIONS
KDE Frameworks Version: 5.54
Qt Version: 5.12

ADDITIONAL INFORMATION
On wayland
Comment 1 Kai Uwe Broulik 2019-02-01 08:16:09 UTC
Thread 1 (Thread 0x7f768bf63840 (LWP 2262)):
[KCrash Handler]
#6  0x00007f76917b3326 in operator==(QString const&, QString const&) () at /usr/lib/libQt5Core.so.5
#7  0x00007f76929438be in PowerDevil::PolicyAgent::onServiceUnregistered(QString const&) () at /usr/lib/libpowerdevilcore.so.2
#8  0x00007f769296e9fa in  () at /usr/lib/libpowerdevilcore.so.2
#9  0x00007f769191a28c in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#10 0x00007f7691c166a6 in QDBusServiceWatcher::serviceUnregistered(QString const&) () at /usr/lib/libQt5DBus.so.5
#11 0x00007f7691c16f0b in  () at /usr/lib/libQt5DBus.so.5
#12 0x00007f7691c17313 in QDBusServiceWatcher::qt_metacall(QMetaObject::Call, int, void**) () at /usr/lib/libQt5DBus.so.5
#13 0x00007f7691bc49ef in  () at /usr/lib/libQt5DBus.so.5
#14 0x00007f769191ab62 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
Comment 2 Kai Uwe Broulik 2019-02-01 08:17:44 UTC
Crashes in 

for (auto it = m_cookieToBusService.constBegin(); it != m_cookieToBusService.constEnd(); ++it) {
    if (it.value() == serviceName) {
        ReleaseInhibition(it.key());
    }
}

Perhaps because ReleaseInhibition mutates the m_cookieToDBusService map whilst it's being iterated.
Comment 3 Peter J. Mello 2019-02-10 04:14:02 UTC
I'm seeing the same behavior (I think) on my Lenovo ThinkPad T420s running Kubuntu 18.10 Cosmic. Including the trace in case it can aid in isolating the issue.

Application: org_kde_powerdevil (org_kde_powerdevil), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f5e0366b840 (LWP 5552))]

Thread 6 (Thread 0x7f5dfa093700 (LWP 23743)):
#0  0x00007f5e09a156d9 in __GI___poll (fds=0x7f5de4007030, nfds=2, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f5e001709b1 in  () at /usr/lib/x86_64-linux-gnu/libpulse.so.0
#2  0x00007f5e001621e0 in pa_mainloop_poll () at /usr/lib/x86_64-linux-gnu/libpulse.so.0
#3  0x00007f5e0016282e in pa_mainloop_iterate () at /usr/lib/x86_64-linux-gnu/libpulse.so.0
#4  0x00007f5e001628e0 in pa_mainloop_run () at /usr/lib/x86_64-linux-gnu/libpulse.so.0
#5  0x00007f5e001708f9 in  () at /usr/lib/x86_64-linux-gnu/libpulse.so.0
#6  0x00007f5dfac8f6f8 in  () at /usr/lib/x86_64-linux-gnu/pulseaudio/libpulsecommon-12.2.so
#7  0x00007f5e089fb164 in start_thread (arg=<optimized out>) at pthread_create.c:486
#8  0x00007f5e09a21def in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f5dfb7fe700 (LWP 5634)):
#0  0x00007f5e09a10f64 in __GI___libc_read (fd=13, buf=0x7f5dfb7fdc90, nbytes=16) at ../sysdeps/unix/sysv/linux/read.c:26
#1  0x00007f5e0776a180 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5e0772491f in g_main_context_check () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5e07724df0 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5e077251d2 in g_main_loop_run () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f5e0079d7b6 in  () at /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#6  0x00007f5e0774d135 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f5e089fb164 in start_thread (arg=<optimized out>) at pthread_create.c:486
#8  0x00007f5e09a21def in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f5dfbfff700 (LWP 5633)):
#0  0x00007f5e09a10f64 in __GI___libc_read (fd=11, buf=0x7f5dfbffeca0, nbytes=16) at ../sysdeps/unix/sysv/linux/read.c:26
#1  0x00007f5e0776a180 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5e0772491f in g_main_context_check () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5e07724df0 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5e07724f6c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f5e07724fb1 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f5e0774d135 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f5e089fb164 in start_thread (arg=<optimized out>) at pthread_create.c:486
#8  0x00007f5e09a21def in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f5e0135f700 (LWP 5630)):
#0  0x00007f5e09a156d9 in __GI___poll (fds=0x7f5df4012930, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f5e07724e46 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5e07724f6c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5e09f3815b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f5e09ee516b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f5e09d340b6 in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f5e0a1f1545 in  () at /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f5e09d3dc87 in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f5e089fb164 in start_thread (arg=<optimized out>) at pthread_create.c:486
#9  0x00007f5e09a21def in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f5e01f70700 (LWP 5577)):
#0  0x00007f5e09a156d9 in __GI___poll (fds=0x7f5e01f6fc78, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f5e090df917 in  () at /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f5e090e153a in xcb_wait_for_event () at /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f5e02ed2159 in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f5e09d3dc87 in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f5e089fb164 in start_thread (arg=<optimized out>) at pthread_create.c:486
#6  0x00007f5e09a21def in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f5e0366b840 (LWP 5552)):
[KCrash Handler]
#6  0x00007f5e09d87ac3 in QHashData::nextNode(QHashData::Node*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f5e0af18543 in PowerDevil::PolicyAgent::onServiceUnregistered(QString const&) () at /usr/lib/x86_64-linux-gnu/libpowerdevilcore.so.2
#8  0x00007f5e0af426e9 in  () at /usr/lib/x86_64-linux-gnu/libpowerdevilcore.so.2
#9  0x00007f5e09f0f6db in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f5e0a24d535 in QDBusServiceWatcher::serviceUnregistered(QString const&) () at /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#11 0x00007f5e0a24dd4b in  () at /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#12 0x00007f5e0a24e13b in QDBusServiceWatcher::qt_metacall(QMetaObject::Call, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#13 0x00007f5e0a1fce8a in  () at /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#14 0x00007f5e09f0ff92 in QObject::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007f5e09ee6499 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007f5e09ee948b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#17 0x00007f5e09f38b23 in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#18 0x00007f5e07724c3e in g_main_context_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007f5e07724ed8 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007f5e07724f6c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007f5e09f38143 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x00007f5e02f63e51 in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#23 0x00007f5e09ee516b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#24 0x00007f5e09eed2e2 in QCoreApplication::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#25 0x0000556a7f8efadf in  ()
#26 0x00007f5e0992b09b in __libc_start_main (main=0x556a7f8efa40, argc=1, argv=0x7ffc7152a488, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffc7152a478) at ../csu/libc-start.c:308
#27 0x0000556a7f8efb4a in _start ()
[Inferior 1 (process 5552) detached]
Comment 4 Lucia Mrenica 2019-02-15 08:09:36 UTC
After closing qbittorent:

Application: org_kde_powerdevil (org_kde_powerdevil), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f8c95e17840 (LWP 2218))]

Thread 5 (Thread 0x7f8c8eba2700 (LWP 2297)):
#0  0x00007f8c9b0c17a4 in read () at /usr/lib/libc.so.6
#1  0x00007f8c997d7971 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f8c998280b0 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#3  0x00007f8c998294e6 in  () at /usr/lib/libglib-2.0.so.0
#4  0x00007f8c9982a5c2 in g_main_loop_run () at /usr/lib/libglib-2.0.so.0
#5  0x00007f8c8f4b1cb8 in  () at /usr/lib/libgio-2.0.so.0
#6  0x00007f8c9980467b in  () at /usr/lib/libglib-2.0.so.0
#7  0x00007f8c9a49fa9d in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f8c9b0d0b23 in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7f8c8f3a3700 (LWP 2293)):
#0  0x00007f8c9b0c17a4 in read () at /usr/lib/libc.so.6
#1  0x00007f8c997d7971 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f8c998280b0 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#3  0x00007f8c998294e6 in  () at /usr/lib/libglib-2.0.so.0
#4  0x00007f8c9982962e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#5  0x00007f8c99829682 in  () at /usr/lib/libglib-2.0.so.0
#6  0x00007f8c9980467b in  () at /usr/lib/libglib-2.0.so.0
#7  0x00007f8c9a49fa9d in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f8c9b0d0b23 in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7f8c8fdf9700 (LWP 2261)):
#0  0x00007f8c9b0c5c21 in poll () at /usr/lib/libc.so.6
#1  0x00007f8c99829540 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f8c9982962e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f8c9b5f8d04 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f8c9b5a1b2c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f8c9b3e5569 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f8c9b86cba6 in  () at /usr/lib/libQt5DBus.so.5
#7  0x00007f8c9b3e696c in  () at /usr/lib/libQt5Core.so.5
#8  0x00007f8c9a49fa9d in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007f8c9b0d0b23 in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7f8c94b37700 (LWP 2250)):
#0  0x00007f8c9b0c5c21 in poll () at /usr/lib/libc.so.6
#1  0x00007f8c9a78d630 in  () at /usr/lib/libxcb.so.1
#2  0x00007f8c9a78f2db in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007f8c954d5949 in  () at /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f8c9b3e696c in  () at /usr/lib/libQt5Core.so.5
#5  0x00007f8c9a49fa9d in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007f8c9b0d0b23 in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7f8c95e17840 (LWP 2218)):
[KCrash Handler]
#6  0x00007f8c9b43c35f in QHashData::nextNode(QHashData::Node*) () at /usr/lib/libQt5Core.so.5
#7  0x00007f8c9c5fa8a5 in PowerDevil::PolicyAgent::onServiceUnregistered(QString const&) () at /usr/lib/libpowerdevilcore.so.2
#8  0x00007f8c9c6259fa in  () at /usr/lib/libpowerdevilcore.so.2
#9  0x00007f8c9b5cd87c in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#10 0x00007f8c9b8ca6c6 in QDBusServiceWatcher::serviceUnregistered(QString const&) () at /usr/lib/libQt5DBus.so.5
#11 0x00007f8c9b8caf2b in  () at /usr/lib/libQt5DBus.so.5
#12 0x00007f8c9b8cb333 in QDBusServiceWatcher::qt_metacall(QMetaObject::Call, int, void**) () at /usr/lib/libQt5DBus.so.5
#13 0x00007f8c9b8789ef in  () at /usr/lib/libQt5DBus.so.5
#14 0x00007f8c9b5ce152 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#15 0x00007f8c9b5a2e99 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#16 0x00007f8c9b5a5f38 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/libQt5Core.so.5
#17 0x00007f8c9b5f9714 in  () at /usr/lib/libQt5Core.so.5
#18 0x00007f8c99827a2f in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#19 0x00007f8c998295e9 in  () at /usr/lib/libglib-2.0.so.0
#20 0x00007f8c9982962e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#21 0x00007f8c9b5f8ce9 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#22 0x00007f8c9b5a1b2c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#23 0x00007f8c9b5a9e36 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#24 0x000055b4625070c6 in  ()
#25 0x00007f8c9aff9223 in __libc_start_main () at /usr/lib/libc.so.6
#26 0x000055b46250712e in _start ()
[Inferior 1 (process 2218) detached]
Comment 5 Laosom 2019-02-17 06:03:13 UTC
Confirmed. Powerdevil sometimes just crashes after desktop startup.
Icon disappears from system tray, you need to log off and log in back.
Annoying bug. Basic desktop functonality.
Comment 6 Lucia Mrenica 2019-02-17 07:41:10 UTC
(In reply to Laosom from comment #5)
> Confirmed. Powerdevil sometimes just crashes after desktop startup.
> Icon disappears from system tray, you need to log off and log in back.
> Annoying bug. Basic desktop functonality.

You don't need to re-login, though. You can use 'nohup /usr/lib/org_kde_powerdevil &' to restart it.
Comment 7 Stefan Zurucker 2019-02-24 13:05:51 UTC
Created attachment 118333 [details]
powerdevil_crash_report

Just chiming in order to confirm that this bug exists and persists on 5.15.1 - I can't pinpoint what's causing it. It does seem to be random and just happening during "normal operation". I've attached a crash report in case it's useful.

SYSTEM INFO
Operating System: KDE neon 5.15
KDE Plasma Version: 5.15.1
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.0
Kernel Version: 4.15.0-45-generic
OS Type: 64-bit
Processors: 4 × AMD A8-5545M APU with Radeon(tm) HD Graphics
Comment 8 Łukasz Konieczny 2019-02-24 17:37:05 UTC
I have similar problem with PowerDevil. When I'm using KTorrent and I close this application, PowerDevil crashes. Here is the log:

Application: org_kde_powerdevil (org_kde_powerdevil), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f4cc9dcff00 (LWP 2494))]

Thread 5 (Thread 0x7f4cc62d4700 (LWP 2510)):
#0  0x00007f4ccc317aa9 in poll () at /lib64/libc.so.6
#1  0x00007f4ccae83036 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f4ccae833c2 in g_main_loop_run () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f4cc6bd6b56 in  () at /usr/lib64/libgio-2.0.so.0
#4  0x00007f4ccaeab4f5 in  () at /usr/lib64/libglib-2.0.so.0
#5  0x00007f4ccb8dffab in start_thread () at /lib64/libpthread.so.0
#6  0x00007f4ccc32266f in clone () at /lib64/libc.so.6

Thread 4 (Thread 0x7f4cc6ad5700 (LWP 2509)):
#0  0x00007f4ccc313684 in read () at /lib64/libc.so.6
#1  0x00007f4ccaec8b10 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f4ccae82b0f in g_main_context_check () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f4ccae82fe0 in  () at /usr/lib64/libglib-2.0.so.0
#4  0x00007f4ccae8315c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#5  0x00007f4ccae831a1 in  () at /usr/lib64/libglib-2.0.so.0
#6  0x00007f4ccaeab4f5 in  () at /usr/lib64/libglib-2.0.so.0
#7  0x00007f4ccb8dffab in start_thread () at /lib64/libpthread.so.0
#8  0x00007f4ccc32266f in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7f4cc7571700 (LWP 2508)):
#0  0x00007f4ccc317aa9 in poll () at /lib64/libc.so.6
#1  0x00007f4ccae83036 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f4ccae8315c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f4ccc84cc5b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f4ccc7f74fb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f4ccc641396 in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f4cccac2565 in  () at /usr/lib64/libQt5DBus.so.5
#7  0x00007f4ccc6426e2 in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f4ccb8dffab in start_thread () at /lib64/libpthread.so.0
#9  0x00007f4ccc32266f in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7f4cc7de3700 (LWP 2507)):
#0  0x00007f4ccc317aa9 in poll () at /lib64/libc.so.6
#1  0x00007f4ccb9d2cc7 in  () at /usr/lib64/libxcb.so.1
#2  0x00007f4ccb9d48ea in xcb_wait_for_event () at /usr/lib64/libxcb.so.1
#3  0x00007f4cc7fd980a in  () at /usr/lib64/libQt5XcbQpa.so.5
#4  0x00007f4ccc6426e2 in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007f4ccb8dffab in start_thread () at /lib64/libpthread.so.0
#6  0x00007f4ccc32266f in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f4cc9dcff00 (LWP 2494)):
[KCrash Handler]
#6  0x00007f4ccc697243 in QHashData::nextNode(QHashData::Node*) () at /usr/lib64/libQt5Core.so.5
#7  0x00007f4ccd869563 in QHash<unsigned int, QString>::const_iterator::operator++() (this=<synthetic pointer>) at /usr/include/qt5/QtCore/qhash.h:394
#8  0x00007f4ccd869563 in PowerDevil::PolicyAgent::onServiceUnregistered(QString const&) (this=0x55a7be0971a0, serviceName=...) at /usr/src/debug/powerdevil5-5.15.0-1.1.x86_64/daemon/powerdevilpolicyagent.cpp:384
#9  0x00007f4ccd893709 in PowerDevil::PolicyAgent::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=<optimized out>, _id=<optimized out>, _a=0x7fff53561a00, _c=<optimized out>) at /usr/src/debug/powerdevil5-5.15.0-1.1.x86_64/build/daemon/powerdevilcore_autogen/EWIEGA46WW/moc_powerdevilpolicyagent.cpp:156
#10 0x00007f4ccc822476 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib64/libQt5Core.so.5
#11 0x00007f4cccb1e5f5 in QDBusServiceWatcher::serviceUnregistered(QString const&) () at /usr/lib64/libQt5DBus.so.5
#12 0x00007f4cccb1ee0b in  () at /usr/lib64/libQt5DBus.so.5
#13 0x00007f4cccb1f1fb in QDBusServiceWatcher::qt_metacall(QMetaObject::Call, int, void**) () at /usr/lib64/libQt5DBus.so.5
#14 0x00007f4cccacdeba in  () at /usr/lib64/libQt5DBus.so.5
#15 0x00007f4ccc822d02 in QObject::event(QEvent*) () at /usr/lib64/libQt5Core.so.5
#16 0x00007f4ccc7f8829 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib64/libQt5Core.so.5
#17 0x00007f4ccc7fb827 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib64/libQt5Core.so.5
#18 0x00007f4ccc84d633 in  () at /usr/lib64/libQt5Core.so.5
#19 0x00007f4ccae82e2e in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#20 0x00007f4ccae830c8 in  () at /usr/lib64/libglib-2.0.so.0
#21 0x00007f4ccae8315c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#22 0x00007f4ccc84cc43 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#23 0x00007f4ccc7f74fb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#24 0x00007f4ccc7ff652 in QCoreApplication::exec() () at /usr/lib64/libQt5Core.so.5
#25 0x000055a7bc5f0adf in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/powerdevil5-5.15.0-1.1.x86_64/daemon/powerdevilapp.cpp:209
[Inferior 1 (process 2494) detached]
Comment 9 Łukasz Konieczny 2019-02-24 17:38:12 UTC
The problem occurs only when I close KTorrent.
Comment 10 Łukasz Konieczny 2019-02-24 17:40:22 UTC
And I have forgotten. I'm using openSUSE Tumbleweed with KDE Frameworks 5.55 and KDE Plasma 5.15.0.
Comment 11 Stefan Zurucker 2019-02-24 20:54:02 UTC
(In reply to Łukasz from comment #9)
> The problem occurs only when I close KTorrent.

Indeed, I can confirm Łukasz' observation. The crash is reproducable every time I completely close KTorrent (via File>Quit or Ctrl+Q).

SYSTEM INFO
Operating System: KDE neon 5.15
KDE Plasma Version: 5.15.1
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.0
Kernel Version: 4.15.0-45-generic
OS Type: 64-bit
Processors: 4 × AMD A8-5545M APU with Radeon(tm) HD Graphics

##Please note: I took the liberty to change the field "platform" from "Arch" back to "unspecified" since we know now this is not limited to Arch.
Comment 12 Patrick Silva 2019-02-27 14:13:51 UTC
maybe bug 404648 is related
Comment 13 Stefan Zurucker 2019-03-03 14:28:39 UTC
The bug persists after update to Plasma 5.15.2

I noticed that I only get a Powerdevil crash notification if I close KTorrent and a torrent is actually running (down- and/or uploading). If all torrents are stopped or paused, the program closes uneventfully.

SYSTEM INFO
Operating System: KDE neon 5.15
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.0
Kernel Version: 4.15.0-45-generic

ADDITIONAL INFO
KTorrent: 5.1.1
on X.org
Comment 14 Patrick Silva 2019-03-03 14:39:16 UTC
is the crash reported as bug 404998 related?
Comment 15 hugh 2019-03-06 13:49:52 UTC
Same issue in Manjaro with Plasma 5.15.2 with Qt 5.12.1.

Qbittorrent closing can crash powerdevil, openvpn connection dropping can also trigger a powerdevil crash.
Comment 16 hugh 2019-03-06 13:50:21 UTC
*** Bug 404998 has been marked as a duplicate of this bug. ***
Comment 17 Kai Uwe Broulik 2019-03-06 13:58:16 UTC
Git commit 980156cda79e573d99a5bdc07fe379aac07cc42e by Kai Uwe Broulik.
Committed on 06/03/2019 at 13:57.
Pushed by broulik into branch 'Plasma/5.15'.

Fix crash when mutating a container while iterating it

The original code used foreach which creates a copy of the container,
then it was "optimized" to avoid this which made it crash.
FIXED-IN: 5.15.3

CCMAIL: a.volkov@rusbitech.ru

M  +4    -1    daemon/powerdevilpolicyagent.cpp

https://commits.kde.org/powerdevil/980156cda79e573d99a5bdc07fe379aac07cc42e
Comment 18 hugh 2019-03-06 14:34:16 UTC
Created attachment 118594 [details]
qBittorrent is erroneously suppressing power mgmt, why?

qBittorrent is erroneously suppressing power mgmt, why?
Comment 19 Patrick Silva 2019-03-06 14:53:02 UTC
probably "inhibit system sleep when torrents are downloading/seeding"
is checked in qbittorrent settings.
If it's unchecked, report bug to qbittorrent devs.
Comment 20 Patrick Silva 2019-03-06 16:34:39 UTC
Thanks to Kai and Antonio Rojas, crash is already fixed on Arch Linux. \o/

https://git.archlinux.org/svntogit/packages.git/commit/trunk?h=packages/powerdevil&id=5bb1a6881928539dd89317f7f98f75bb66af554b
Comment 21 Bernie Innocenti 2019-04-08 04:16:14 UTC
*** Bug 406320 has been marked as a duplicate of this bug. ***