Fix crash when mutating a container while iterating it

The original code used foreach which creates a copy of the container,
then it was "optimized" to avoid this which made it crash.

BUG: 403776
FIXED-IN: 5.15.3

CCMAIL: a.volkov@rusbitech.ru